--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table border="1">
+	<thead>
+		<tr bgcolor="red">
+			<th>Part</th> <th>XS</th> <th>S</th> <th>M</th> <th>L</th> <th>XL</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr bgcolor="pink">
+			<td>Waist</td> <td>25</td> <td>28</td> <td>30</td> <td>31</td> <td>32</td>
+		</tr>
+		<tr bgcolor="pink">
+			<td>Chest</td> <td>34</td> <td>34</td> <td>38</td> <td>40</td> <td>41</td>
+		</tr>
+		<tr bgcolor="pink">
+			<td>Sleeve</td> <td>23</td> <td>24</td> <td>24</td> <td>25</td> <td>25</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
